# robot_test

romusha_ws/devel/: .catkin  local_setup.sh  setup.sh
romusha_ws/devel/include/msg_pkg/: Controller.h
romusha_ws/devel/lib/main_pkg/: main_node  node_serial
romusha_ws/devel/lib/pkgconfig/: main_pkg.pc  msg_pkg.pc
romusha_ws/devel/lib/python3/dist-packages/msg_pkg/msg/: _Controller.py
romusha_ws/devel/share/common-lisp/ros/msg_pkg/msg/: Controller.lisp  _package.lisp  _package_Controller.lisp  msg_pkg-msg.asd
romusha_ws/devel/share/gennodejs/ros/msg_pkg/msg/: Controller.js  _index.js
romusha_ws/devel/share/main_pkg/cmake/: main_pkgConfig.cmake
romusha_ws/devel/share/msg_pkg/cmake/: msg_pkg-msg-paths.cmake  msg_pkgConfig.cmake
romusha_ws/devel/share/roseus/ros/msg_pkg/: manifest.l
romusha_ws/devel/share/roseus/ros/msg_pkg/msg/: Controller.l
romusha_ws/src/main_pkg/: CMakeLists.txt  package.xml
romusha_ws/src/main_pkg/src/main_node/: controller.cpp  main.cpp
romusha_ws/src/main_pkg/src/node_serial/: serial.cpp
romusha_ws/src/msg_pkg/: CMakeLists.txt  package.xml
romusha_ws/src/msg_pkg/msg/: Controller.msg
